<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66ffffff" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#000" >

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/back"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="16dp"
            android:text="@string/Setting"
            android:textSize="20sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/change_pwd"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/title"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/btn_selector5"
        android:text="@string/Update_pwd" />

    <Button
        android:id="@+id/query_user"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/change_pwd"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/btn_selector5"
        android:text="@string/Query_user" />

    <TextView
        android:id="@+id/query_user_info"
        android:layout_below="@+id/query_user"
        android:layout_marginTop="6dp"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:background="@drawable/btn_selector8s"
        android:text="@string/Logout" />

</RelativeLayout>