<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/rl_view"
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:layout_centerInParent="true"
        android:layout_marginRight="60dp"
        android:background="@drawable/btns_focused2" >

        <Button
            android:id="@+id/button1"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/btn_selector4"
            android:text="@string/cuicui" />

        <Button
            android:id="@+id/button2"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_selector4"
            android:text="@string/zddb" />

        <TextView
            android:id="@+id/tvt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button1"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:text="@string/bj_msg" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:textColor="#cc000000"
            android:text="@string/wenxin" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:textColor="#cc000000"
            android:text="@string/tishi" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:layout_centerInParent="true" >

        <ImageView
            android:id="@+id/icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_launcher" />
    </RelativeLayout>

</RelativeLayout>