<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/run"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff" >

    <RelativeLayout
        android:id="@+id/top_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bg" >

        <RelativeLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.yangsion.runandroid.widget.CircleImageView
                android:id="@+id/pick"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:src="@drawable/pick"
                app:border_color="@color/ffffff"
                app:border_width="1dp"
                android:contentDescription="@string/pick" />

            <ImageButton
                android:id="@+id/menu"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/pick"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/btn_selector4"
                android:contentDescription="@string/menu"
                android:src="@drawable/menu" />

            <ImageButton
                android:id="@+id/huanfu"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_alignTop="@+id/pick"
                android:layout_toLeftOf="@+id/menu"
                android:layout_toStartOf="@+id/menu"
                android:background="@drawable/btn_selector4"
                android:contentDescription="@string/hf"
                android:src="@drawable/hf" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/xuanze"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top"
            android:layout_marginTop="30dp"
            android:background="#66ffffff"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/btns_selector"
                android:drawableTop="@drawable/tj"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/Mobile_phone_detection" />

            <TextView
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/btns_selector"
                android:drawableTop="@drawable/yh"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/Clearing_up_the_rubbish" />

            <TextView
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/btns_selector"
                android:drawableTop="@drawable/jcgl"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/Process_management" />

            <TextView
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/btns_selector"
                android:drawableTop="@drawable/rjgl"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/Software_management" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_below="@+id/top_bg"
        android:background="#11000000" />

    <FrameLayout
        android:id="@+id/list_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_bg" >
    </FrameLayout>

</RelativeLayout>